# ExpertSystem

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
cmake/: BuildExternals.cmake
config/: default.xml
include/: IExpertSystem.hpp  ILogger.hpp
src/: CMakeLists.txt
src/App/: CMakeLists.txt  main.cpp
src/Engine/: CMakeLists.txt  ExpertSystem.cpp  ExpertSystem.hpp  IExpertSystemLoader.hpp  ITree.hpp  Node.hpp  StdOutLogger.cpp  StdOutLogger.hpp  Tree.cpp  Tree.hpp  Types.hpp  XmlExpertSystemLoader.cpp  XmlExpertSystemLoader.hpp
